--- a/frontend/index.html
+++ b/frontend/index.html
@@ -41,8 +41,8 @@
 		.toolbar { display: flex; align-items: center; gap: 10px; margin-top: 12px; flex-wrap: wrap; }
 		.stat { color: var(--muted); font-size: 12px; padding: 6px 10px; background: #0d141d; border: 1px solid var(--border); border-radius: 10px; }
 
-		.table-wrap { margin-top: 16px; background: #0c1219; border: 1px solid var(--border); border-radius: 12px; overflow: hidden; }
-		table { width: 100%; border-collapse: collapse; }
+		.table-wrap { margin-top: 16px; background: #0c1219; border: 1px solid var(--border); border-radius: 12px; overflow-x: auto; overflow-y: hidden; }
+		table { width: auto; min-width: 100%; border-collapse: collapse; }
 		thead th { position: sticky; top: 0; background: #101824; color: #c8d6e5; font-weight: 600; font-size: 12px; text-align: left; padding: 10px; border-bottom: 1px solid var(--border); }
 		tbody td { padding: 10px; border-bottom: 1px solid #141b25; font-size: 12px; color: #d6e2ef; }
 		tbody tr:hover { background: #0f1823; }
@@ -63,23 +63,23 @@
 		<div class="header">
 			<h1>Transactions Search</h1>
 			<span class="badge">Dark • Modern • Fast</span>
-		</div>
+      </div>
 
 		<div class="card">
 			<div class="row">
 				<div class="col-4">
 					<label class="label">PAN</label>
 					<input id="pan" class="input" placeholder="e.g., AAACO8053A" />
-				</div>
+          </div>
 				<div class="col-6">
 					<label class="label">Name (Marathi or English)</label>
 					<input id="seed" class="input" placeholder="e.g., मिताली श्रीनिवास पेंढारकर" />
-				</div>
+          </div>
 				<div class="col-2" style="display:flex; align-items:flex-end; justify-content:flex-end; gap:8px;">
 					<button id="btnSearch" class="btn btn-primary">Search</button>
 					<button id="btnClear" class="btn btn-ghost">Clear</button>
-				</div>
-			</div>
+          </div>
+        </div>
 			<div class="toolbar">
 				<span id="stat" class="stat">Ready</span>
 				<div style="margin-left:auto; display:flex; gap:8px; align-items:center;">
@@ -91,9 +91,9 @@
 						<option>200</option>
 					</select>
 					<button id="btnExport" class="btn">Export CSV</button>
-				</div>
-			</div>
-		</div>
+          </div>
+            </div>
+          </div>
 
 		<div class="table-wrap" id="tableWrap" style="margin-top:16px;">
 			<div id="loading" class="skeleton" style="display:none;"></div>
@@ -102,9 +102,9 @@
 				<button class="btn" id="prev">Prev</button>
 				<span id="pageInfo" class="stat">Page 1 / 1</span>
 				<button class="btn" id="next">Next</button>
-			</div>
-		</div>
-	</div>
+          </div>
+          </div>
+        </div>
 
 	<div class="toast" id="toast"></div>
 
