--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,6 @@
 			--danger: #ff6b6b;
 			--border: #1f2a37;
 		}
-		mark { background: #ffeb3b; color: #111; padding: 0 .15em; border-radius: 2px; }
 		* { box-sizing: border-box; }
 		html, body { height: 100%; }
 		body { margin: 0; background: linear-gradient(180deg, #0b0f14, #0a0d12); color: var(--text); font-family: "Inter", system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; }
@@ -42,7 +41,21 @@
 		.toolbar { display: flex; align-items: center; gap: 10px; margin-top: 12px; flex-wrap: wrap; }
 		.stat { color: var(--muted); font-size: 12px; padding: 6px 10px; background: #0d141d; border: 1px solid var(--border); border-radius: 10px; }
 
-		.table-wrap { margin-top: 16px; background: #0c1219; border: 1px solid var(--border); border-radius: 12px; overflow-x: auto; overflow-y: hidden; }
+		.table-wrap { 
+			margin-top: 16px; 
+			background: #0c1219; 
+			border: 1px solid var(--border); 
+			border-radius: 12px; 
+			overflow-x: auto; 
+			overflow-y: hidden; 
+			max-width: 100%;
+			scrollbar-width: thin;
+			scrollbar-color: #2a3a4e #0a0f14;
+		}
+		.table-wrap::-webkit-scrollbar { height: 12px; }
+		.table-wrap::-webkit-scrollbar-track { background: #0a0f14; border-radius: 6px; }
+		.table-wrap::-webkit-scrollbar-thumb { background: #2a3a4e; border-radius: 6px; }
+		.table-wrap::-webkit-scrollbar-thumb:hover { background: #3a4a5e; }
 		table { width: auto; min-width: 100%; border-collapse: collapse; }
 		thead th { position: sticky; top: 0; background: #101824; color: #c8d6e5; font-weight: 600; font-size: 12px; text-align: left; padding: 10px; border-bottom: 1px solid var(--border); }
 		tbody td { padding: 10px; border-bottom: 1px solid #141b25; font-size: 12px; color: #d6e2ef; }
@@ -57,6 +70,23 @@
 
 		.skeleton { background: linear-gradient(90deg, #0e1520 25%, #121b29 37%, #0e1520 63%); background-size: 400% 100%; animation: shimmer 1.2s infinite; border-radius: 8px; height: 38px; }
 		@keyframes shimmer { 0% { background-position: 100% 0; } 100% { background-position: 0 0; } }
+
+		/* Highlighting styles */
+		mark.highlight-pan {
+			background-color: #ffeb3b;
+			color: #000;
+			padding: 2px 4px;
+			border-radius: 3px;
+			font-weight: 600;
+		}
+
+		mark.highlight-name {
+			background-color: #4caf50;
+			color: #fff;
+			padding: 2px 4px;
+			border-radius: 3px;
+			font-weight: 600;
+		}
 	</style>
 </head>
 <body>
@@ -113,33 +143,19 @@
 	// Use localhost when opened via file://, otherwise keep same host at port 8000
 	const API_BASE = (location.protocol === 'file:') ? 'http://localhost:8000' : `${location.protocol}//${location.hostname || 'localhost'}:8000`;
 	const el = id => document.getElementById(id);
-	let state = { rows: [], cols: [], page: 1, pageSize: 100 };
+	let state = { rows: [], cols: [], page: 1, pageSize: 100, searchedPan: null, searchedNames: [] };
 
 	function showToast(msg){ const t = el('toast'); t.textContent = msg; t.classList.add('show'); setTimeout(()=>t.classList.remove('show'), 2200); }
 	function setStatus(msg){ el('stat').textContent = msg; }
 	function setLoading(on){ el('loading').style.display = on ? 'block':'none'; el('table').style.display = on ? 'none':'table'; el('pager').style.display = on ? 'none':'flex'; }
 
-	async function fetchPhonetics(){
-		const seed = el('seed').value.trim();
-		if (!seed){ showToast('Enter a name'); return; }
-		try {
-			const res = await fetch(`${API_BASE}/phonetics?` + new URLSearchParams({seed_name: seed}));
-			if (!res.ok) throw new Error(await res.text());
-			const json = await res.json();
-			const chips = el('chips'); chips.innerHTML = '';
-			const makeChip = (text) => { const b = document.createElement('button'); b.className='btn'; b.style.padding='6px 10px'; b.textContent = text; b.onclick=()=>{ el('seed').value = text; }; return b; };
-			const eng = Array.from(json.variations?.english || []).slice(0, 12);
-			const dev = Array.from(json.variations?.marathi || []).slice(0, 12);
-			for (const v of eng) chips.appendChild(makeChip(v));
-			for (const v of dev) chips.appendChild(makeChip(v));
-			showToast('Phonetic suggestions updated');
-		} catch(e){ console.error(e); showToast('Phonetics failed'); }
-	}
-
 	async function fetchSearch(){
-		const pan = el('pan').value.trim();
+		const pan = el('pan').value.trim().toUpperCase();
 		const seed = el('seed').value.trim();
 		if (!pan && !seed){ showToast('Enter PAN or Name'); return; }
+		// Store searched values for highlighting
+		state.searchedPan = pan || null;
+		state.searchedNames = seed ? [seed] : [];
 		const qs = new URLSearchParams();
 		if (pan) qs.set('pan', pan);
 		if (seed) qs.set('seed_name', seed);
@@ -150,9 +166,7 @@
 			if (!res.ok) throw new Error(await res.text());
 			const json = await res.json();
 			state.rows = json.data || [];
-			// Build visible columns but hide helper highlight fields
-			const allCols = state.rows.length ? Object.keys(state.rows[0]) : [];
-			state.cols = allCols.filter(c => !['name_hit_field','name_hit_snippet','name_hit_snippet_html','pan_hit_field','pan_hit_snippet_html'].includes(c));
+			state.cols = state.rows.length ? Object.keys(state.rows[0]) : [];
 			state.page = 1;
 			render();
 			setStatus(`Found ${state.rows.length.toLocaleString()} rows`);
@@ -169,6 +183,134 @@
 		return rows.slice(start, start+size);
 	}
 
+	// Filter columns to show only specific ones
+	function getFilteredColumns(){
+		// Only show these columns in order
+		const allowedCols = ['pan_numbers', 'buyer', 'seller', 'geo_measurement', 'age'];
+		const result = [];
+		// Add columns in the specified order, only if they exist in the data
+		for (const col of allowedCols){
+			if (state.cols.includes(col)){
+				result.push(col);
+			}
+		}
+		return result;
+	}
+
+	// PAN utilities
+	const PAN_RE = /(?<![A-Z0-9])[A-Z]{5}[A-Z0-9]{4}[A-Z](?![A-Z])/i;
+	function extractPansFromText(text){
+		const t = String(text || '').toUpperCase();
+		const out = [];
+		let m;
+		const re = new RegExp(PAN_RE.source, 'gi');
+		while ((m = re.exec(t))) out.push(m[0].toUpperCase());
+		return out;
+	}
+
+	function normalizeText(s){
+		return (s || '').toString().normalize('NFKC').toLowerCase()
+			.replace(/[\u200c\u200d]/g, '')
+			.replace(/[\.,:;\-_/\\()\[\]{}|@#*!?"'`]+/g, ' ')
+			.replace(/\s+/g, ' ').trim();
+	}
+
+	function escapeHtml(v){
+		const s = (v==null ? '' : String(v));
+		return s.replace(/[&<>"']/g, c => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;','\'':'&#39;'}[c]));
+	}
+
+	function escapeRegex(str){
+		return str.replace(/[.*+?^${}()|[\]\\]/g, '\\$&');
+	}
+
+	// Enhanced escapeHtml that preserves mark tags
+	function escapeHtmlWithMark(v){
+		const s = (v == null ? '' : String(v));
+		const markTagRegex = /<\/?mark[^>]*>/gi;
+		const placeholders = [];
+		let placeholderIndex = 0;
+		let result = s.replace(markTagRegex, (match) => {
+			placeholders.push(match);
+			return `___MARK_TAG_${placeholderIndex++}___`;
+		});
+		result = result.replace(/[&<>"']/g, c => ({
+			'&': '&amp;',
+			'<': '&lt;',
+			'>': '&gt;',
+			'"': '&quot;',
+			"'": '&#39;'
+		}[c]));
+		placeholders.forEach((tag, idx) => {
+			result = result.replace(`___MARK_TAG_${idx}___`, tag);
+		});
+		return result;
+	}
+
+	// Highlight text if it exactly matches searched PAN or names
+	function highlightText(text){
+		if (!text && text !== 0) return escapeHtml(text);
+		const str = String(text);
+		let result = str;
+		const highlightedRanges = [];
+		
+		// Find PAN matches
+		if (state.searchedPan){
+			const pans = extractPansFromText(str);
+			if (pans.some(p => p.toUpperCase() === state.searchedPan.toUpperCase())){
+				const panRegex = new RegExp(`\\b${escapeRegex(state.searchedPan)}\\b`, 'gi');
+				let match;
+				while ((match = panRegex.exec(str)) !== null){
+					highlightedRanges.push({
+						start: match.index,
+						end: match.index + match[0].length,
+						type: 'pan'
+					});
+				}
+			}
+		}
+		
+		// Find name matches
+		if (state.searchedNames && state.searchedNames.length > 0){
+			for (const name of state.searchedNames){
+				const normalizedName = normalizeText(name);
+				const normalizedCell = normalizeText(str);
+				if (normalizedName && normalizedCell === normalizedName && name.trim()){
+					const nameEscaped = escapeRegex(name.trim());
+					const nameRegex = new RegExp(nameEscaped.replace(/\s+/g, '\\s+'), 'gi');
+					let match;
+					while ((match = nameRegex.exec(str)) !== null){
+						const overlaps = highlightedRanges.some(r => 
+							(match.index >= r.start && match.index < r.end) ||
+							(match.index + match[0].length > r.start && match.index + match[0].length <= r.end) ||
+							(match.index <= r.start && match.index + match[0].length >= r.end)
+						);
+						if (!overlaps){
+							highlightedRanges.push({
+								start: match.index,
+								end: match.index + match[0].length,
+								type: 'name'
+							});
+						}
+					}
+				}
+			}
+		}
+		
+		// Sort ranges by start position and apply highlights in reverse order
+		highlightedRanges.sort((a, b) => b.start - a.start);
+		
+		for (const range of highlightedRanges){
+			const before = result.substring(0, range.start);
+			const match = result.substring(range.start, range.end);
+			const after = result.substring(range.end);
+			const className = range.type === 'pan' ? 'highlight-pan' : 'highlight-name';
+			result = before + `<mark class="${className}">${match}</mark>` + after;
+		}
+		
+		return escapeHtmlWithMark(result);
+	}
+
 	function render(){
 		const table = el('table');
 		table.innerHTML = '';
@@ -176,23 +318,27 @@
 		table.style.display='table';
 		const thead = document.createElement('thead');
 		const htr = document.createElement('tr');
-		for (const c of state.cols){ const th = document.createElement('th'); th.textContent = c; htr.appendChild(th); }
+		const cols = getFilteredColumns();
+		for (const c of cols){ const th = document.createElement('th'); th.textContent = c; htr.appendChild(th); }
 		thead.appendChild(htr);
 		table.appendChild(thead);
 		const tbody = document.createElement('tbody');
 		const pageRows = paginate(state.rows, state.page, state.pageSize);
 		for (const r of pageRows){
 			const tr = document.createElement('tr');
-			for (const c of state.cols){
+			for (const c of cols){
 				const td = document.createElement('td');
 				const v = r[c];
-				// If this column is the hit field, render the HTML snippet with <mark>
-				if (r.name_hit_field === c && r.name_hit_snippet_html){
-					td.innerHTML = String(r.name_hit_snippet_html);
-				} else if (r.pan_hit_field === c && r.pan_hit_snippet_html){
-					td.innerHTML = String(r.pan_hit_snippet_html);
+				// Handle age column specially - show value even if 0
+				if (c === 'age') {
+					if (v !== null && v !== undefined && v !== '') {
+						td.textContent = String(v);
+					} else {
+						td.textContent = '';
+					}
 				} else {
-					td.textContent = (v!==null && v!==undefined) ? String(v).slice(0, 500) : '';
+					const highlighted = highlightText(v);
+					td.innerHTML = (v!==null && v!==undefined) ? highlighted.slice(0, 500) : '';
 				}
 				tr.appendChild(td);
 			}
@@ -206,7 +352,7 @@
 
 	function exportCSV(){
 		if (!state.rows.length){ showToast('No data'); return; }
-		const cols = state.cols;
+		const cols = getFilteredColumns();
 		const lines = [];
 		lines.push(cols.map(safeCsv).join(','));
 		for (const r of state.rows){ lines.push(cols.map(c=>safeCsv(r[c])).join(',')); }
@@ -218,9 +364,19 @@
 	}
 	function safeCsv(v){ if (v===null||v===undefined) return ''; const s = String(v).replace(/"/g,'""'); return /[",\n]/.test(s) ? `"${s}"` : s; }
 
+	// Auto-uppercase PAN input
+	el('pan').addEventListener('input', (e) => {
+		e.target.value = e.target.value.toUpperCase();
+	});
+
 	el('btnSearch').onclick = fetchSearch;
-	el('btnPhonetics').onclick = fetchPhonetics;
-	el('btnClear').onclick = () => { el('pan').value=''; el('seed').value=''; setStatus('Ready'); };
+	el('btnClear').onclick = () => { 
+		el('pan').value=''; 
+		el('seed').value=''; 
+		state.searchedPan = null;
+		state.searchedNames = [];
+		setStatus('Ready'); 
+	};
 	el('btnExport').onclick = exportCSV;
 	el('prev').onclick = ()=>{ if (state.page>1){ state.page--; render(); }};
 	el('next').onclick = ()=>{ const pages = Math.max(1, Math.ceil(state.rows.length / state.pageSize)); if (state.page<pages){ state.page++; render(); }};
